text overflow at album title fixed

--- a/app/assets/stylesheets/albums.scss
+++ b/app/assets/stylesheets/albums.scss
@@ -1,5 +1,4 @@
 $border-color: #d3d3d3;
-$album-box-shadow: rgba(50, 50, 50, .75);
 
 .albums {
   list-style-type: none;
@@ -7,7 +6,7 @@ $album-box-shadow: rgba(50, 50, 50, .75);
 
   .album {
     border: 1px solid $border-color;
-    box-shadow: 4px 4px 5px 0 $album-box-shadow;
+    box-shadow: 4px 4px 5px 0 rgba(50, 50, 50, .75);
     float: left;
     height: 192px;
     margin-bottom: 16px;
@@ -31,7 +30,11 @@ $album-box-shadow: rgba(50, 50, 50, .75);
       font-size: 1em;
       font-weight: bold;
       height: 18px;
-      margin-left: 7px;
+      margin-left: 3px;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      width: 185px;
     }
 
     .album-actions {
@@ -43,9 +46,9 @@ $album-box-shadow: rgba(50, 50, 50, .75);
 
     .album-description {
       clear: both;
+      float: left;
       font-size: .75em;
       height: 46px;
-      margin-left: 5px;
       overflow: hidden;
       padding: 3px;
     }
